syntax = "proto3";

package tateyama.grpc.proto;

service PingService {
  rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {}
message PingResponse {}
